update login page, fixed the lat_menu, add user management

--- a/public/403.html
+++ b/public/403.html
@@ -3,8 +3,7 @@
     <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
             <div class="panel-body">
-                <h1>The page you were looking for doesn't exist.</h1>
-                <p>You may have mistyped the address or the page may have moved.</p>
+                <h1>You have not the right to be here, pass your way.</h1>
             </div>
             <div class="panel-footer">If you are the application owner check the logs for more information.</div>
         </div>
